@@ -33,20 +33,21 @@ t/data/instruction2.pyx
 t/PYX-SGML-Tags/01-use.t
 t/PYX-SGML-Tags/02-version.t
 t/PYX-SGML-Tags/03-new.t
-t/PYX-SGML-Tags/04-parse-char.t
-t/PYX-SGML-Tags/05-parse-instruction.t
-t/PYX-SGML-Tags/06-parse-comment.t
-t/PYX-SGML-Tags/07-parse-element-sgml.t
-t/PYX-SGML-Tags/08-parse-element-xml.t
-t/PYX-SGML-Tags/09-parse_file-raw-char.t
-t/PYX-SGML-Tags/10-parse_file-raw-instruction.t
-t/PYX-SGML-Tags/11-parse_file-raw-comment.t
-t/PYX-SGML-Tags/12-parse_file-raw-element-sgml.t
-t/PYX-SGML-Tags/13-parse_file-raw-element-xml.t
-t/PYX-SGML-Tags/14-parse_file-libxml-char.t
-t/PYX-SGML-Tags/15-parse_file-libxml-instruction.t
-t/PYX-SGML-Tags/16-parse_file-libxml-comment.t
-t/PYX-SGML-Tags/17-parse_file-libxml-element.t
+t/PYX-SGML-Tags/04-finalize.t
+t/PYX-SGML-Tags/05-parse-char.t
+t/PYX-SGML-Tags/06-parse-instruction.t
+t/PYX-SGML-Tags/07-parse-comment.t
+t/PYX-SGML-Tags/08-parse-element-sgml.t
+t/PYX-SGML-Tags/09-parse-element-xml.t
+t/PYX-SGML-Tags/10-parse_file-raw-char.t
+t/PYX-SGML-Tags/11-parse_file-raw-instruction.t
+t/PYX-SGML-Tags/12-parse_file-raw-comment.t
+t/PYX-SGML-Tags/13-parse_file-raw-element-sgml.t
+t/PYX-SGML-Tags/14-parse_file-raw-element-xml.t
+t/PYX-SGML-Tags/15-parse_file-libxml-char.t
+t/PYX-SGML-Tags/16-parse_file-libxml-instruction.t
+t/PYX-SGML-Tags/17-parse_file-libxml-comment.t
+t/PYX-SGML-Tags/18-parse_file-libxml-element.t
 Tags.pm
 xt/PYX-SGML-Tags/01-pod_coverage.t
 xt/PYX-SGML-Tags/02-pod.t
