@@ -1,4 +1,5 @@
 0.06
+ - Add tests for finalize().
  - Change bugtracker to github.
  - Fix tests for situation when Tags::Output::LibXML not present.
  - Rewrite doc to use =head2 for methods.
